// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v3;

import "com/digitalasset/canton/protocol/v2/mediator.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

message Verdict {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_verdict {
    google.protobuf.Empty approve = 1;
    com.digitalasset.canton.protocol.v2.ParticipantReject participant_reject = 2;
    com.digitalasset.canton.protocol.v2.MediatorReject mediator_reject = 3; // new version
  }
}

message TransactionResultMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  Verdict verdict = 2; // v2.Verdict -> v3.Verdict
  bytes root_hash = 3;
  string domain_id = 4;
}

message TransferResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  oneof domain {
    string source_domain = 2; // result for transfer-out request
    string target_domain = 3; // result for transfer-in request
  }
  repeated string informees = 4;
  Verdict verdict = 5; // new Verdict type
}
